# sandbox

./: Dockerfile  another_script.py  change_color.py  check_cookies.py  dict1.json  file.json  file.txt  file_to_bytes.py  get_document.py  google_meet.py  keep_tryna.py  loans.xlsx  main.py  manifest.json  mock_bot.py  new.py  pyproject.toml  redis-script.py  requirements.txt  some.py  some1.py  some_SHI.py  tech_interview_kristina.py  test_task.py  wha_foo.py
app/: containers.py  main.py  services.py
blockchain/: block.py  chain.py
donate_service/: database_related.py  soe.py
frontend/: getItems.js
glpi_bot/: files_operations.py  make_doc_ticket_relation.py  mock_bot.py  upload_document.py
interview/: binary_search_tree.py  immutable_mutable_types.py  linked_list.py  mro.py  staticmethodexplain.py
interview_sber/: main.py
interview_sber/services/: extractor.py  loader.py  transformer.py
ozon_bank/: main.py  main1.py  probability_theory.py  some.py
photo_portal_requests/: post_toggle.py
services/: blockchain.py
testing/: brute_force.py  descriptor.py  main.py  probability.py  rle.py  shard_managers.py  some.txt  test1.py  test2.py  test3.py
