[tool.poetry]
name = "sandbox1"
version = "0.1.0"
description = ""
authors = ["airguy <airguy-one@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
requests = "^2.31.0"
aiogram = "^3.5.0"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
