[tool.poetry]
name = "sandbox1"
version = "0.1.0"
description = ""
authors = ["airguy <airguy-one@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
requests = "^2.31.0"
aiogram = "^3.5.0"
torch = "^2.3.0"
aiogram-tonconnect = "^0.13.5"
redis = "^5.0.4"
pytoniq-core = "^0.1.35"
python-dotenv = "^1.0.1"
pytonconnect = "^0.3.1"
opencv-python = "^4.9.0.80"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
dependency-injector = "^4.41.0"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
